--- a/Simbirsoft_workshop/app/build.gradle
+++ b/Simbirsoft_workshop/app/build.gradle
@@ -52,4 +52,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
     implementation 'com.hannesdorfmann:adapterdelegates4:4.3.0'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.3.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+
 }
