--- a/Simbirsoft_workshop/app/src/main/AndroidManifest.xml
+++ b/Simbirsoft_workshop/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.nikita.kut.android.simbirsoft_workshop">
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
