--- a/Simbirsoft_workshop/app/build.gradle
+++ b/Simbirsoft_workshop/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'org.jmailen.kotlinter'
     id 'kotlin-parcelize'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -54,5 +55,9 @@ dependencies {
     implementation 'com.hannesdorfmann:adapterdelegates4:4.3.0'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.3.0'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
+    implementation 'com.squareup.moshi:moshi:1.12.0'
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.12.0'
+
 
 }
