--- a/Simbirsoft_workshop/app/build.gradle
+++ b/Simbirsoft_workshop/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'org.jmailen.kotlinter'
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -45,19 +46,38 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.firebase:firebase-database:19.2.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    // Recycler View
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
+    // Adapter delegate
     implementation 'com.hannesdorfmann:adapterdelegates4:4.3.0'
+    // Three ten ABP date, time work
     implementation 'com.jakewharton.threetenabp:threetenabp:1.3.0'
+    // GSON, Moshi
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
     implementation 'com.squareup.moshi:moshi:1.12.0'
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.12.0'
+    // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0-RC'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0-RC'
+    // View model, LiveData
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    implementation "androidx.fragment:fragment-ktx:1.3.3"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
+    //Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
+    // Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:27.1.0')
 }
