--- a/Simbirsoft_workshop/app/build.gradle
+++ b/Simbirsoft_workshop/app/build.gradle
@@ -80,4 +80,9 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
     // Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:27.1.0')
+    // Room DB
+    implementation "androidx.room:room-runtime:2.3.0"
+    implementation "androidx.room:room-ktx:2.3.0"
+    kapt "androidx.room:room-compiler:2.3.0"
+
 }
