--- a/Simbirsoft_workshop/app/src/main/AndroidManifest.xml
+++ b/Simbirsoft_workshop/app/src/main/AndroidManifest.xml
@@ -8,13 +8,14 @@
 
 
     <application
+        android:name=".SimbirsoftWorkshopApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Simbirsoft_workshop">
-        <activity android:name=".MainActivity">
+        <activity android:name=".screens.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
